[project]
name = "api"
version = "0.1.0"
description = "FastAPI Cloud Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.fastapi]
entrypoint = "main:app"
