[project]
name = "api"
version = "0.1.0"
description = "FastAPI Cloud Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]==0.139.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "supabase==2.31.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.fastapi]
entrypoint = "main:app"

[tool.setuptools.packages.find]
exclude = ["node_modules*"]
